--- a/app.json
+++ b/app.json
@@ -1,32 +1,32 @@
 {
-  "id": "1c778b0d-7c38-4a37-a0f1-764d674afcf5",
-  "name": "MyProject",
-  "publisher": "Default Publisher",
-  "version": "1.0.0.0",
-  "brief": "",
-  "description": "",
-  "privacyStatement": "",
-  "EULA": "",
-  "help": "",
-  "url": "",
-  "logo": "",
-  "dependencies": [],
-  "screenshots": [],
-  "platform": "1.0.0.0",
-  "application": "24.0.0.0",
-  "idRanges": [
-    {
-      "from": 50100,
-      "to": 50149
-    }
-  ],
-  "resourceExposurePolicy": {
-    "allowDebugging": true,
-    "allowDownloadingSource": true,
-    "includeSourceInSymbolFile": true
-  },
-  "runtime": "13.0",
-  "features": [
-    "NoImplicitWith"
-  ]
+    "id": "1c778b0d-7c38-4a37-a0f1-764d674afcf5",
+    "name": "Book Project",
+    "publisher": "My Book Publisher",
+    "version": "1.1.0.0",
+    "brief": "Tutorials",
+    "description": "Tutorials",
+    "privacyStatement": "",
+    "EULA": "",
+    "help": "",
+    "url": "",
+    "logo": "",
+    "dependencies": [],
+    "screenshots": [],
+    "platform": "1.0.0.0",
+    "application": "25.1.25873.25976",
+    "idRanges": [
+        {
+            "from": 50100,
+            "to": 50149
+        }
+    ],
+    "resourceExposurePolicy": {
+        "allowDebugging": true,
+        "allowDownloadingSource": true,
+        "includeSourceInSymbolFile": true
+    },
+    "runtime": "14.0",
+    "features": [
+        "NoImplicitWith"
+    ]
 }
